# muon-website

./: .gitignore  README.md  build-and-run-server.sh  package-lock.json  package.json  run-server.sh
backend/: Cargo.toml
backend/src/: main.rs
frontend/: README.md  package-lock.json  package.json
frontend-new/: package-lock.json  package.json
frontend-new/public/: index.html
frontend-new/public/data/notice/: 1.md  index.json  recruit_2023.md
frontend-new/src/: App.vue  item.ts  main.ts  utils.ts
frontend-new/src/components/: ImageHeader.vue  KakaoMap.vue  MenuButton.vue  NoticeBoard.vue
frontend-new/src/plugins/: vuetify.ts
frontend-new/src/router/: index.ts
frontend-new/src/views/: AboutView.vue  ContactView.vue  HomeView.vue  JobsView.vue  ProductsView.vue
frontend/public/: index.html
frontend/public/data/notice/: index.json
frontend/src/: App.vue  main.ts  utils.ts
frontend/src/components/: HelloWorld.vue  ImageHeader.vue  Map.vue  MenuButton.vue  NoticeBoard.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/views/: About.vue  Blog.vue  Contact.vue  Home.vue  Jobs.vue  Products.vue
frontend/tests/e2e/: .eslintrc.js
frontend/tests/unit/: .eslintrc.js  example.spec.ts
server/: Cargo.toml  README.md
server/src/: main.rs
src/: App.vue
src/components/: HelloWorld.vue  MenuButton.vue
src/plugins/: vuetify.ts
src/router/: index.ts
src/views/: About.vue  Contact.vue  Home.vue  Jobs.vue
