[package]
name = "muon-website-server"
version = "1.0.0"
authors = ["Mewlips <mewlips@muon.co>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-cors = "0.2.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"
futures = "0.3.1"
env_logger = "0.5"
bytes = "0.5"
listenfd = "0.3"